                         
This list is imcomplete, but contains a few important things left.

        * better error handling for timeouts and other sending errors.
        
        * add a menu bar to the message window to get the options and settings more
          centralized. However, the menu bar needs to be hide-able (maybe automatically)

Version 0.9.9.4 - 2005/01/20

        + added support for the snapping windows plugin.
        
        * changed window flashing code. Its now using FlashWindowEx() which means that
          tabSRMM won't work on Windows 95 anymore, but I don't think thats a problem :)
          The advantage is a code which is less complex and saves resources as well (the
          old code had to deal with timers for flashing the windows, the new code doesn't
          need to do this anymore).
          
          Another advantage is that you can now set the number of flashes (only applies to
          containers which are using the "default" value and are NOT set to flash forever)
          and the flashing interval. You can find both options under Options->Message sessions->
          Container options.
          
Version 0.9.9.3 - 2005/01/20

        + new "per container option": "Use static icon" - if checked, the 
          container will use a static icon instead of showing the contacts
          status icon. The icon will be obtained from the tabsrmm_icons.dll
          using ordinal #18 (IDI_CONTAINER). If you're using a modified
          tabsrmm_icons.dll, you'll have to reshack it and supply a valid
          icon.
          
          The message icon will still be visible when the container has unread
          events in one of its tabs, but the status icon(s) will be replaced by
          the static container icon.
        
        * the tabsrmm_icons.dll will now be recognized in both the .\plugins and
          .\icons subdirectories.
          Order of search is:
          a) .\plugins
          b) .\icons
          